--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Pedro Jiménez pjimenez@qualitycw.com",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "jsonwebtoken": "^8.3.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.0",
     "npm": "^5.10.0"
