--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.3.0",
     "express": "^4.16.3",
     "mongoose": "^5.1.0",
+    "mongoose-unique-validator": "^2.0.0",
     "npm": "^5.10.0"
   },
   "engines": {
