--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
-    "jsonwebtoken": "^8.3.0",
+    "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^8.3.0",
+    "method-override": "^2.3.10",
     "mongoose": "^5.1.0",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^3.0.0",
+    "nodemon": "^1.19.2",
     "npm": "^5.10.0"
   },
   "engines": {
