--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.3.0",
     "method-override": "^2.3.10",
@@ -23,7 +24,8 @@
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^3.0.0",
     "nodemon": "^1.19.2",
-    "npm": "^5.10.0"
+    "npm": "^5.10.0",
+    "unzip": "^0.1.11"
   },
   "engines": {
     "node": "10.15"
